--- a/main/NPOI.Core.csproj
+++ b/main/NPOI.Core.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>2.4.2</Version>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <PackageId>WycliffeAssociates.NPOI</PackageId>
     <AssemblyName>NPOI</AssemblyName>
     <RootNamespace>NPOI</RootNamespace>
     <SignAssembly>true</SignAssembly>
