--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ mono: none
 #must declare version
 dotnet: 2.2.401
 script:
- - dotnet pack ./main/NPOI.Core.csproj -c Release --output $TRAVIS_BUILD_DIR/build
+ - dotnet pack ./ooxml/NPOI.OOXML.Core.csproj -c Release --output $TRAVIS_BUILD_DIR/build
  - cd $TRAVIS_BUILD_DIR/build
  - ls *.nupkg
  - PKG_NAME=$(ls *.nupkg)
