--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ mono: none
 #must declare version
 dotnet: 2.2.401
 script:
- - dotnet pack ./ooxml/NPOI.OOXML.Core.csproj -c Release --output $TRAVIS_BUILD_DIR/build
+ - dotnet pack ./solution/NPOI.Core.sln -c Release --output $TRAVIS_BUILD_DIR/build
  - cd $TRAVIS_BUILD_DIR/build
  - ls *.nupkg
- - PKG_NAME=$(ls *.nupkg)
- - if [ -f "$PKG_NAME" ]; then dotnet nuget push $PKG_NAME -k $NUGET_TOKEN -s https://api.nuget.org/v3/index.json; fi
+ - if [ -f "$PKG_NAME" ]; then for f in *.nupkg ; do dotnet nuget push $f -k $NUGET_TOKEN -s https://api.nuget.org/v3/index.json; done; fi
