--- a/main/NPOI.Core.csproj
+++ b/main/NPOI.Core.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.4.3</Version>
+    <Version>2.4.5</Version>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyName>NPOI</AssemblyName>
-    <RootNamespace>NPOI</RootNamespace>
+    <AssemblyName>WycliffeAssociates.NPOI</AssemblyName>
+    <RootNamespace>WycliffeAssociates.NPOI</RootNamespace>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>npoi.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>D:\github\npoi\main\NPOI.xml</DocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
