--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ script:
  - dotnet pack ./solution/NPOI.Core.sln -c Release --output $TRAVIS_BUILD_DIR/build
  - cd $TRAVIS_BUILD_DIR/build
  - ls *.nupkg
- - if [ -f "$PKG_NAME" ]; then for f in *.nupkg ; do dotnet nuget push $f -k $NUGET_TOKEN -s https://api.nuget.org/v3/index.json; done; fi
+ - for f in *.nupkg ; do dotnet nuget push $f -k $NUGET_TOKEN -s https://api.nuget.org/v3/index.json; done
