--- a/ooxml/NPOI.OOXML.net2.csproj
+++ b/ooxml/NPOI.OOXML.net2.csproj
@@ -287,6 +287,7 @@
     <Compile Include="XWPF\Usermodel\XWPFTableCell.cs" />
     <Compile Include="XWPF\Usermodel\XWPFTableRow.cs" />
     <Compile Include="Util\EnumConverter.cs" />
+    <Compile Include="XWPF\Util\DocumentStylesBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="npoi.snk" />
