--- a/main/NPOI.Core.csproj
+++ b/main/NPOI.Core.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.4.7</Version>
+    <Version>2.5.1</Version>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyName>WycliffeAssociates.NPOI</AssemblyName>
     <RootNamespace>WycliffeAssociates.NPOI</RootNamespace>
